--- a/reper_front/app/src/main/res/layout/item_edit_my_account_rv.xml
+++ b/reper_front/app/src/main/res/layout/item_edit_my_account_rv.xml
@@ -4,21 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:clickable="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/editmyaccount_item_tv_store_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/pretendard_regular"
         android:text="매장명"
         android:textColor="@color/black"
@@ -30,14 +22,13 @@
 
     <ImageButton
         android:id="@+id/editmyaccount_item_btn_delte"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:src="@drawable/item_editmyaccount_delete"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/editmyaccount_item_tv_store_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/editmyaccount_item_tv_store_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
