--- a/reper_front/app/src/main/res/layout/activity_main.xml
+++ b/reper_front/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/activityMainFragmentContainer"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/activity_main_bottom_menu"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/activity_main_bottom_menu"
+        app:navGraph="@navigation/nav_graph"
+        app:defaultNavHost="true" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
