--- a/reper_front/app/src/main/res/layout/item_employee.xml
+++ b/reper_front/app/src/main/res/layout/item_employee.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="24dp"
             android:text="김정언"
             android:textColor="@color/fontblack"
-            android:textSize="18dp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btn_reject"
             app:layout_constraintStart_toStartOf="parent"
