--- a/reper_front/app/src/main/res/menu/bottom_menu_item.xml
+++ b/reper_front/app/src/main/res/menu/bottom_menu_item.xml
@@ -3,28 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/home_icon"
+        android:id="@+id/homeFragment"
         android:enabled="true"
         app:showAsAction="ifRoom"
         android:icon="@drawable/home_icon"
         android:title="Home" />
 
     <item
-        android:id="@+id/recipe_icon"
+        android:id="@+id/allRecipeFragment"
         android:enabled="true"
         app:showAsAction="ifRoom"
         android:icon="@drawable/recipe_icon"
         android:title="Recipe" />
 
     <item
-        android:id="@+id/order_icon"
+        android:id="@+id/orderFragment"
         android:enabled="true"
         app:showAsAction="ifRoom"
         android:icon="@drawable/order_icon"
         android:title="Order" />
 
     <item
-        android:id="@+id/mypage_icon"
+        android:id="@+id/myPageFragment"
         android:enabled="true"
         app:showAsAction="ifRoom"
         android:icon="@drawable/profile_icon"
