--- a/reper_front/app/src/main/res/layout/dialog_store_add.xml
+++ b/reper_front/app/src/main/res/layout/dialog_store_add.xml
@@ -7,48 +7,25 @@
     android:background="@drawable/home_notice_dialog_back"
     android:padding="40dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+
+    <EditText
+        android:id="@+id/storeAddET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/search_bar"
-        android:paddingHorizontal="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:id="@+id/request_access_d_btn_search"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:backgroundTint="@android:color/transparent"
-            android:src="@drawable/search_icon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/request_access_d_et"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@android:color/transparent"
-            android:fontFamily="@font/pretendard_regular"
-            android:hint="가게명을 검색해보세요."
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/request_access_d_btn_search"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:hint="가게명을 입력해주세요."
+        android:layout_marginTop="24dp"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ScrollView
-        android:id="@+id/request_access_d_sv"
+        android:id="@+id/store_RV"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/storeAddET">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/request_access_d_rv"
@@ -60,15 +37,17 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
     </ScrollView>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/store_add_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:visibility="visible"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/request_access_d_sv">
+        app:layout_constraintTop_toBottomOf="@+id/store_RV">
+
 
         <TextView
             android:id="@+id/add_store_name"
@@ -88,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pretendard_regular"
-            android:text="에"
+            android:text="을"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/add_store_name"
@@ -98,7 +77,7 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="권한을 요청하시겠습니까?"
+            android:text="추가하시겠습니까?"
             app:layout_constraintEnd_toEndOf="@+id/textView17"
             app:layout_constraintStart_toStartOf="@+id/add_store_name"
             app:layout_constraintTop_toBottomOf="@+id/add_store_name" />
