--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -28,7 +28,7 @@
         android:paddingHorizontal="24dp">
 
         <ImageView
-            android:id="@+id/recipe_fg_back_icon"
+            android:id="@+id/store_fg_back_icon"
             android:layout_width="30sp"
             android:layout_height="28sp"
             android:layout_marginTop="62dp"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="사장님 메뉴"
             android:textColor="@color/bgwhite"
-            app:layout_constraintStart_toEndOf="@+id/recipe_fg_back_icon"
+            app:layout_constraintStart_toEndOf="@+id/store_fg_back_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -64,7 +64,7 @@
             tools:layout_editor_absoluteX="24dp" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/boss_fg_notice_write"
+            android:id="@+id/boss_fg_store_add"
             android:layout_width="110dp"
             android:layout_height="100dp"
             android:layout_marginStart="2dp"
@@ -86,7 +86,7 @@
                     android:layout_width="47dp"
                     android:layout_height="47dp"
                     android:layout_marginTop="8dp"
-                    android:src="@drawable/ink_pen_24px"
+                    android:src="@drawable/outline_add_business_24"
                     android:tint="@color/maingreen"
                     tools:ignore="UseAppTint" />
 
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/pretendard_regular"
-                    android:text="공지 쓰기"
+                    android:text="가게 관리"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -111,7 +111,7 @@
             android:elevation="5dp"
             app:cardCornerRadius="8dp"
             app:layout_constraintEnd_toStartOf="@+id/boss_fg_recipe_manage"
-            app:layout_constraintStart_toEndOf="@+id/boss_fg_notice_write"
+            app:layout_constraintStart_toEndOf="@+id/boss_fg_store_add"
             app:layout_constraintTop_toBottomOf="@+id/boss_fg_store_spiner">
 
 
@@ -191,7 +191,7 @@
             android:text="권한 요청 내역"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/boss_fg_notice_write" />
+            app:layout_constraintTop_toBottomOf="@id/boss_fg_store_add" />
 
 
         <androidx.recyclerview.widget.RecyclerView
