--- a/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_notice_manage.xml
@@ -35,6 +35,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
+        <ImageView
+            android:id="@+id/add_btn"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="61dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/baseline_add_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
             android:id="@+id/recipe_fg_search_noti"
             android:layout_width="match_parent"
