--- a/reper_front/app/src/main/res/layout/fragment_store_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_store_manage.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:background="@color/bgwhite"
-    tools:context=".ui.boss.RecipeManageFragment">
+    tools:context=".ui.boss.StoreManageFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -30,12 +30,12 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="60dp"
-            android:text="레시피 관리"
+            android:text="가게 관리"
             app:layout_constraintStart_toEndOf="@+id/store_fg_back_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/recipe_fg_add_tv"
+            android:id="@+id/store_fg_add_tv"
             style="@style/titleFontStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,39 +47,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <LinearLayout
-            android:id="@+id/recipe_fg_search_noti"
-            android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/search_bar"
-            android:orientation="horizontal"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
 
-
-            <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="28dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:backgroundTint="@color/bgwhite"
-                android:src="@drawable/search_24px"
-                app:tint="@color/darkgray" />
-
-
-            <EditText
-                android:layout_width="270dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:hint="레시피를 검색해보세요"
-                android:textSize="18sp" />
-
-        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipe_fg_add_RV"
+            android:id="@+id/store_fg_RV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
@@ -87,7 +58,7 @@
             android:scrollbarThumbVertical="@drawable/scroll_bar"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_editor_absoluteX="32dp" />
 
 
