--- a/reper_front/app/src/main/res/layout/fragment_write_noti.xml
+++ b/reper_front/app/src/main/res/layout/fragment_write_noti.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="52dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/noti_write_fg_save_btn"
             app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -74,6 +74,7 @@
                 android:backgroundTint="@color/lightgray"
                 android:fontFamily="@font/pretendard_semibold"
                 android:gravity="center_vertical"
+                android:layout_marginStart="8dp"
                 android:hint="제목을 입력하세요"
                 android:textSize="18sp"
                 android:visibility="gone"
@@ -87,6 +88,7 @@
                 android:backgroundTint="@color/lightgray"
                 android:fontFamily="@font/pretendard_semibold"
                 android:gravity="center_vertical"
+                android:layout_marginStart="8dp"
                 android:text="제목을 입력하세요"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
