--- a/reper_front/app/src/main/res/layout/fragment_join.xml
+++ b/reper_front/app/src/main/res/layout/fragment_join.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.login.JoinFragment">
 
     <ScrollView
@@ -18,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_marginBottom="60dp">
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/FragmentJoinEmailText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -55,28 +57,31 @@
                         android:weightSum="2">
 
                         <EditText
+                            android:id="@+id/FragmentJoinEmailInput"
                             android:layout_width="match_parent"
                             android:layout_height="49.36dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_weight="0.5"
                             android:background="@drawable/edit_text_background"
                             android:hint="이메일을 입력해주세요."
-                            android:inputType="textEmailAddress"
                             android:imeOptions="actionNext"
+                            android:inputType="textEmailAddress"
                             android:paddingStart="16dp"
                             android:paddingEnd="16dp"
                             android:textColorHint="#C4C4C4"
-                            android:textSize="15.79sp"
-                            android:layout_marginRight="8dp"
-                            android:layout_weight="0.5"/>
+                            android:textSize="15.79sp" />
 
                         <androidx.appcompat.widget.AppCompatButton
-                            android:text="확인"
-                            android:textSize="16sp"
-                            android:textColor="#FFFFFF"
-                            android:fontFamily="@font/pretendard_semibold"
+                            android:id="@+id/FragmentJoinEmailCheckButton"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_weight="1.5"
                             android:background="@drawable/confirm_button_background"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"/>
+                            android:fontFamily="@font/pretendard_semibold"
+                            android:text="확인"
+
+                            android:textColor="#FFFFFF"
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
@@ -90,23 +95,50 @@
                     android:layout_marginBottom="16dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </LinearLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:fontFamily="@font/pretendard_semibold"
-                        android:text="비밀번호*"
-                        android:textColor="#1C4700"
-                        android:textSize="15.19dp" />
+                        android:layout_marginBottom="8dp">
+
+                        <TextView
+                            android:id="@+id/FragmentJoinPasswordText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/pretendard_semibold"
+                            android:text="비밀번호*"
+                            android:textColor="#1C4700"
+                            android:textSize="15.19dp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                        <TextView
+                            android:id="@+id/FragmentJoinPasswordError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="* 영문 소문자, 숫자 를 포함, 8자이상"
+                            android:textColor="#F26547"
+                            android:visibility="gone"
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                     <EditText
+                        android:id="@+id/FragmentJoinPasswordInput"
                         android:layout_width="match_parent"
                         android:layout_height="49.36dp"
                         android:background="@drawable/edit_text_background"
                         android:hint="비밀번호를 입력해주세요."
-                        android:inputType="textPassword"
                         android:imeOptions="actionNext"
+                        android:inputType="textPassword"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
                         android:textColorHint="#C4C4C4"
@@ -122,23 +154,44 @@
                     android:layout_marginBottom="16dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:fontFamily="@font/pretendard_semibold"
-                        android:text="이름*"
-                        android:textColor="#1C4700"
-                        android:textSize="15.19dp" />
+                        android:layout_marginBottom="8dp">
+
+                        <TextView
+                            android:id="@+id/FragmentJoinNameText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/pretendard_semibold"
+                            android:text="이름*"
+                            android:textColor="#1C4700"
+                            android:textSize="15.19dp"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                        <TextView
+                            android:id="@+id/FragmentJoinNameError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="* 이름을 입력해주세요."
+                            android:textColor="#F26547"
+                            android:visibility="gone"
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                     <EditText
+                        android:id="@+id/FragmentJoinNameInput"
                         android:layout_width="match_parent"
                         android:layout_height="49.36dp"
                         android:background="@drawable/edit_text_background"
                         android:hint="이름을 입력해주세요."
-                        android:inputType="textPersonName"
                         android:imeOptions="actionNext"
+                        android:inputType="textPersonName"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
                         android:textColorHint="#C4C4C4"
@@ -154,24 +207,45 @@
                     android:layout_marginBottom="16dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:fontFamily="@font/pretendard_semibold"
-                        android:text="전화번호*"
-                        android:imeOptions="actionNext"
-                        android:textColor="#1C4700"
-                        android:textSize="15.19dp" />
+                        android:layout_marginBottom="8dp">
+
+                        <TextView
+                            android:id="@+id/FragmentJoinPhoneText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/pretendard_semibold"
+                            android:imeOptions="actionNext"
+                            android:text="전화번호*"
+                            android:textColor="#1C4700"
+                            android:textSize="15.19dp"
+                            tools:ignore="MissingConstraints" />
+
+
+                        <TextView
+                            android:id="@+id/FragmentJoinPhoneError"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="* 전화번호를 양식에 맞게 입력해주세요"
+                            android:textColor="#F26547"
+                            android:visibility="gone"
+                            app:layout_constraintRight_toRightOf="parent"
+                            tools:ignore="MissingConstraints" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                     <EditText
+                        android:id="@+id/FragmentJoinPhoneInput"
                         android:layout_width="match_parent"
                         android:layout_height="49.36dp"
                         android:background="@drawable/edit_text_background"
                         android:hint="01012345678"
-                        android:inputType="phone"
                         android:imeOptions="actionNext"
+                        android:inputType="phone"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
                         android:textColorHint="#C4C4C4"
@@ -202,21 +276,23 @@
                         android:layout_width="match_parent"
                         android:layout_height="49.36dp"
                         android:background="@drawable/join_spinner_background"
+                        android:overlapAnchor="false"
                         android:paddingStart="16dp"
                         android:paddingEnd="40dp"
                         android:popupBackground="#FFFFFF"
-                        android:spinnerMode="dropdown"
-                        android:overlapAnchor="false"/>
+                        android:spinnerMode="dropdown" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
 
                 <!--가게 정보 등록 선택 칸 -->
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/FragmentJoinStoreInfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -229,12 +305,13 @@
                         android:textSize="15.19dp" />
 
                     <EditText
+                        android:id="@+id/FragmentJoinStoreInfoInput"
                         android:layout_width="329.41dp"
                         android:layout_height="49.36dp"
                         android:background="@drawable/edit_text_background"
                         android:hint="가게 정보를 입력해 주세요. (선택)"
-                        android:inputType="text"
                         android:imeOptions="actionDone"
+                        android:inputType="text"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
                         android:textColorHint="#C4C4C4"
@@ -253,16 +330,18 @@
 
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/FragmentJoinJoinBtn"
                     android:layout_width="match_parent"
                     android:layout_height="49.36dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/login_button"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:text="Join"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="18sp" />
 
             </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
