--- a/reper_front/app/src/main/res/layout/item_noti.xml
+++ b/reper_front/app/src/main/res/layout/item_noti.xml
@@ -18,7 +18,7 @@
         android:paddingVertical="18dp">
 
         <TextView
-            android:id="@+id/itemNotiTitle"
+            android:id="@+id/item_noti_title"
             android:text="🔥내용🔥 멋쟁이 우리팀들 화이팅!!"
             android:textSize="16sp"
             android:fontFamily="@font/pretendard_regular"
