[feat] front - AllRecipeFragment 기능 작업
미완성.
    ////////////////////////////////////
    // - 라디오 그룹으로 필터 다시 만들기.
    // - 재료 포함 제외 검색, 유사도 되는 건지 묻기.
    //      1. 유사도 X -> 샷 과 같은 명확한 것으로 필터 변경
    //      2. 유사도 O -> 현상 유지
    // - 카테고리누르고 필터나 검색 눌렀을 때 rv 업데이트 되게 로직 변경 (현재: 카테고리를 누르면 rv 업데이트. ViewModel.recipeList가 업데이트 되면 initAdapter 호출 됨.!!!)
    // - 검색 구현
    // - 검색 버튼이 꼭 필요한가? 필터에서 하나 클릭하면 다이얼로그 꺼지면서 바로 검색되게 할 거임.
    // - 즐겨찾기 구현
    ////////////////////////////////////
이거 해야함

--- a/reper_front/app/src/main/res/layout/rv_order_recipe_item.xml
+++ b/reper_front/app/src/main/res/layout/rv_order_recipe_item.xml
@@ -17,8 +17,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/americano_hot"
+            android:scaleType="centerCrop"
+            android:src="@drawable/noimage"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
