--- a/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
+++ b/reper_front/app/src/main/res/layout/dialog_ingredient_filter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="380dp"
     android:layout_height="600dp"
     android:background="@drawable/dialog_delete"
@@ -19,10 +20,19 @@
         android:id="@+id/filter_spinner"
         android:layout_width="120dp"
         android:layout_height="48dp"
-        android:background="@drawable/filter_spinner_back"
+        android:background="@drawable/boss_spinner_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <RadioGroup
+        android:id="@+id/filter_spinner_rg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+    </RadioGroup>
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
@@ -162,25 +172,14 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/dialog_delete_cancel_btn"
+        android:id="@+id/dialog_filter_cancel_btn"
         android:layout_width="100dp"
         android:layout_height="48dp"
         android:background="@drawable/line_btn"
         android:fontFamily="@font/pretendard_semibold"
         android:text="취소"
         android:textColor="@color/darkgray"
-        android:layout_marginRight="24dp"
-        app:layout_constraintEnd_toStartOf="@+id/dialog_delete_delete_btn"
-        app:layout_constraintTop_toTopOf="@+id/dialog_delete_delete_btn" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/dialog_delete_delete_btn"
-        android:layout_width="100dp"
-        android:layout_height="48dp"
-        android:background="@drawable/green_btn"
-        android:fontFamily="@font/pretendard_bold"
-        android:text="검색하기"
-        android:textColor="@color/bgwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
