--- a/reper_front/app/src/main/res/layout/item_all_recipe_rv.xml
+++ b/reper_front/app/src/main/res/layout/item_all_recipe_rv.xml
@@ -71,7 +71,8 @@
                 android:id="@+id/allrecipe_rv_item_iv_menu"
                 android:layout_width="130dp"
                 android:layout_height="120dp"
-                android:background="@color/lightgray"
+                android:src="@drawable/noimage"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
